--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "firebase": "^4.9.0",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
@@ -14,7 +16,8 @@
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
     "redux-promise": "^0.5.3",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "youtube-api-search": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
