--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "firebase": "^4.9.0",
+    "install": "^0.10.4",
     "loadash": "^1.0.0",
     "lodash": "^4.17.5",
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-bootstrap": "^0.32.0",
     "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.0",
+    "react-sparkline": "^2.0.0",
     "redux-promise": "^0.5.3",
     "redux-thunk": "^2.2.0",
     "youtube-api-search": "0.0.5"
